[package]
name = "rmalloc"
version = "1.2.0"
authors = ["iximeow <me@iximeow.net>"]
license = "0BSD"
edition = "2021"
description = "randomized malloc"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.77"
nix = "0.18.0"
cfg-if = "0.1"
yaxpeax-x86 = { version = "0.1.3", default-features = false, features = [], optional = true }
yaxpeax-arch = { version = "0.0.4", default-features = false, features = [], optional = true }
num-traits = { version = "0.2.12", optional = true }
rand = { version = "0.8.5", default-features = false, features = [] }
rand_chacha = { version = "0.3.1", default-features = false, features = [] }

[features]
default = []
entropy = ["rand/getrandom"]

safety-checks = ["yaxpeax-x86", "yaxpeax-arch", "num-traits"]
